--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -8,6 +8,10 @@
         </form>
     </div>
     <div>Список сообщений</div>
+    <form method="post" action="filter">
+        <input type="text" name="filter">
+        <button type="submit">Найти</button>
+    </form>
     {{#messages}}
     <div>
         <b>{{id}}</b>
